Tweak publishing scripts